--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 buildscript {
     ext{
         kotlin_gradle = "1.5.10"
+        koin_version = "3.1.2"
+        retrofit_version = "2.9.0"
+        coroutines_dep = "1.5.2"
     }
     repositories {
         google()
@@ -9,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
