--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,16 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    dynamicFeatures = [':data:network', ':data:repository']
 }
 
 dependencies {
+    //Koin
+    implementation "io.insert-koin:koin-android:$koin_version"
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
