--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ dependencyResolutionManagement {
 rootProject.name = "Flick"
 include ':app'
 include ':domain'
-include ':data'
+include ':data:network'
+include ':data:repository'
