--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,26 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Dev CI
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ dev ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
-  super-lint:
-    name: Lint code base
+  lint:
+    name: 🔍 Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Run Super-Linter
-        uses: github/super-linter@v4.8.1
-        env:  
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Lint
+        run: bash ./gradlew lintDebug
+
+      - name: Generate lint report
+        uses: actions/upload-artifact@v2
+        with:
+          name: lint_report.html
+          path: app/build/reports/lint-results-debug.html
 
