--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         koin_version = "3.1.2"
         retrofit_version = "2.9.0"
         coroutines_dep = "1.5.2"
+
+        room_version = "2.3.0"
+        gson_version="2.8.8"
     }
     repositories {
         google()
