--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation project(path: ':domain')
     implementation project(path: ':data:network')
+    implementation project(path: ':data:cache')
     testImplementation 'junit:junit:4.+'
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
