--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,6 @@ dependencyResolutionManagement {
 rootProject.name = "Flick"
 include ':app'
 include ':domain'
-include ':data:network'
-include ':data:repository'
 include ':data:cache'
+include ':data:remote'
+include ':data:repository'
