--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -1,16 +1,19 @@
-apply plugin: 'com.android.dynamic-feature'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
+
 android {
-    compileSdk 30
+    compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.repository"
-        minSdk 24
-        targetSdk 30
+        minSdkVersion 24
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -19,24 +22,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
-
     //Koin
     implementation "io.insert-koin:koin-android:$koin_version"
 
-    implementation project(":app")
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation project(path: ':domain')
-    implementation project(path: ':data:network')
     implementation project(path: ':data:cache')
-    testImplementation 'junit:junit:4.+'
+    implementation project(path: ':data:remote')
+   
+
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
     testImplementation 'com.github.javafaker:javafaker:0.16'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.annotation:annotation:1.2.0'
 }
