--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -32,6 +32,9 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
     //Koin
     implementation "io.insert-koin:koin-android:$koin_version"
 
@@ -48,6 +51,8 @@ dependencies {
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
     testImplementation 'com.github.javafaker:javafaker:0.16'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
